# mir_layered_costmap

./: .gitignore  LICENSE  README.md
activity_layer/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1  activity_layer_plugin.xml  bags  manifest.xml
activity_layer/config/: sim_activity_layer.vcg
activity_layer/include/: activityLayer.h  activityMap.hpp  activityMapComponent.hpp  activity_layer.h  bayes_cell.h  bayes_learner.h  costmap_interpretator.h  fremen_cell.h  fremen_learner.h  grid_structure.h  observation_interface.h  pmac_cell.h  pmac_learner.h  pmac_learner.h.orig  probabilistic_filter.h  probabilistic_filter.h.orig  probablistic_cell.h  probablistic_filter.h
activity_layer/launch/: activity_layer_for_sim.launch  default_activity_layer.yaml  test_activty.launch
activity_layer/src/: activityLayer.cpp  activityMap.cpp  activityMapComponent.cpp  activity_layer.cpp  bayes_cell.cpp  bayes_learner.cpp  fremen_cell.cpp  fremen_learner.cpp  observation_interface.h  pmac_cell.cpp  pmac_cell.h  pmac_learner.cpp  probabilistic_filter.cpp  probabilistic_filter.cpp.orig  probablistic_cell.cpp  probablistic_cell.h  probablistic_filter.cpp  test_layer.cpp
laser_to_range/: CMakeLists.txt  manifest.xml
laser_to_range/src/: laser_to_range.cpp
layered_costmap_2d/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1  costmap_plugins.xml  manifest.xml
layered_costmap_2d/cfg/: Costmap2D.cfg  GenericPlugin.cfg  InflationPlugin.cfg  ObstaclePlugin.cfg  VoxelPlugin.cfg
layered_costmap_2d/config/: rosconsole.conf  test_costmap_2d.rviz
layered_costmap_2d/include/layered_costmap_2d/: array_parser.h  cost_values.h  costmap_2d.h  costmap_2d_publisher.h  costmap_2d_ros.h  costmap_layer.h  footprint.h  inflation_layer.h  layer.h  layered_costmap.h  observation.h  observation_buffer.h  obstacle_layer.h  static_layer.h  testing_helper.h  voxel_layer.h
layered_costmap_2d/launch/: default_activity_layer.yaml  default_costmap2d.yaml  example_params.yaml  minimal.yaml  mir_bring_up_layered_costmap.launch  pre_hydro_costmap _bringup.yaml  pre_hydro_costmap.yaml  test_activty.launch  test_costmap_2d.launch
layered_costmap_2d/plugins/: inflation_layer.cpp  obstacle_layer.cpp  static_layer.cpp  voxel_layer.cpp
layered_costmap_2d/src/: array_parser.cpp  costmap_2d.cpp  costmap_2d_cloud.cpp  costmap_2d_markers.cpp  costmap_2d_node.cpp  costmap_2d_publisher.cpp  costmap_2d_ros.cpp  costmap_layer.cpp  costmap_math.cpp  footprint.cpp  layer.cpp  layered_costmap.cpp  observation_buffer.cpp
layered_costmap_2d/world/: tek-map.yaml  tek-mir.world
map_msgs/src/map_msgs/msg/: _OccupancyGridUpdate.py  _PointCloud2Update.py  _ProjectedMap.py  _ProjectedMapInfo.py  __init__.py
map_msgs/src/map_msgs/srv/: _GetMapROI.py  _GetPointMap.py  _GetPointMapROI.py  _ProjectedMapsInfo.py  _SaveMap.py  _SetMapProjections.py  __init__.py
occupancy_image_publish/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1  manifest.xml
occupancy_image_publish/src/: occupancy_image_publish.cpp
range_sensor_layer/: CMakeLists.txt  activity_layer_plugin.xml  manifest.xml  range_layer_plugin.xml
range_sensor_layer/cfg/: RangeSensorLayer.cfg
range_sensor_layer/include/range_sensor_layer/: range_sensor_layer.h
range_sensor_layer/launch/: sim_priority_layer.yaml  sim_range_layer.launch  sim_range_layer.yaml
range_sensor_layer/src/: range_sensor_layer.cpp
range_sensor_layer/world/: world.world
run_mir/: manifest.xml
run_mir/launch/: activity_layer.yaml  bags  mir_bag.launch  mir_bag_hector.launch  mir_run_dynamic.launch
sim_dynamic_world/: CMakeLists.txt  manifest.xml
sim_dynamic_world/launch/: fast_dynamic_obstacle.yaml  mir_sim_dynamic.launch  mir_simple_dynamics.yaml  sim_activity_layer.launch  sim_activity_layer.yaml  slow_dynamic_obstacle.yaml  tune_dynamics_learner.launch  tune_sensor_model.launch
sim_dynamic_world/src/: dynamic_obsacle_control.cpp  jump_to_obstacle_control.cpp  markov_obstacle_control.cpp
sim_dynamic_world/world/: dynamic_area.yaml  empty_100.yaml  feature_100.yaml  navigation_simulation_with_features.yaml  scan_hector.yaml  scan_hector_map.yaml  sim_activity_layer.world  sim_scan.world
store_occupancy_image/: CMakeLists.txt  manifest.xml
store_occupancy_image/launch/: store_occupancy.launch
store_occupancy_image/src/: store_color.cpp  store_occupancy_im.cpp
user_priority_map/: CMakeLists.txt  activity_layer_plugin.xml  manifest.xml
user_priority_map/include/: user_priority_layer.h
user_priority_map/launch/: sim_priority_layer.launch  sim_priority_layer.yaml
user_priority_map/src/: user_priority_layer.cpp
visualize_activity_layer/: CMakeLists.txt  manifest.xml
visualize_activity_layer/src/: occupancy_cloud.cpp
